Fixed navbar image on mobile

--- a/custom/navbar.css
+++ b/custom/navbar.css
@@ -32,6 +32,9 @@
         padding-top: 2em;
         padding-bottom: 2em;
     }
+    #white-logo{
+        display: none;
+    }
 }
 
 .page-header #content{
